# MALT

./: LICENSE  README.md  entry.py  malt.py  pyproject.toml
