[project]
name = "malt"
version = "0.1.0"
authors = [
    { name = "Noel Danz", email = "noeldanz@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.8,<2",
    "transformers[torch]>=5.7,<6",
    "torchvision==0.26.0",
    "matplotlib>=3.10,<4",
    "tqdm<5",
    "pillow>=12.2,<13",
    "numpy",
    "pandas>=3.0,<4",
    "nicegui>=3,<4",
    "plotly>=6.7,<7",
    "pywebview",
    "tables",
    "pyarrow",
]

[project.scripts]
malt = "entry:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["malt.py", "entry.py"]
